--- a/app/src/main/res/layout/mark_info_dialog.xml
+++ b/app/src/main/res/layout/mark_info_dialog.xml
@@ -27,8 +27,8 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:layout_marginVertical="10dp"
-            android:layout_width="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:id="@+id/mark_description_in_marks_dialog"/>
