--- a/app/src/main/res/layout/mark_info_dialog.xml
+++ b/app/src/main/res/layout/mark_info_dialog.xml
@@ -7,32 +7,48 @@
     android:orientation="vertical">
 
     <TextView
+        android:textAlignment="center"
+        android:id="@+id/description_in_marks_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         android:text="@string/work_info"
         android:layout_gravity="center_horizontal"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:layout_margin="10dp"/>
 
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/graph_in_marks_dialog"
-        android:layout_margin="20dp"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_gravity="center_horizontal" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ScrollView
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/graph_in_marks_dialog"
+            android:padding="10dp"
+            android:layout_margin="20dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="start" />
+
+        <ListView
+            android:id="@+id/legend_in_marks_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"/>
+
+    </LinearLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
             android:layout_margin="10dp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:id="@+id/mark_description_in_marks_dialog"/>
+            android:id="@+id/mark_description_in_marks_dialog" />
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
