--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="bad_mood">#FFa70820</color>
+    <color name="average_mood">#FFf56e1a</color>
+    <color name="good_mood">#FF469023</color>
+    <color name="bad_mood_light">#D63643</color>
+    <color name="average_mood_light">#D68F62</color>
+    <color name="good_mood_light">#97CC34</color>
 </resources>
