--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -12,6 +12,6 @@
 
     <item
         android:id="@id/diaryFragment"
-        android:icon="@drawable/ic_launcher_foreground"
-        android:title="Настройки" />
+        android:icon="@drawable/ic_baseline_school_24"
+        android:title="Успеваемость" />
 </menu>
